--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>devanshu</title>
+    <title>idevanshu</title>
+    
+    <style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html {
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+  
+  body {
+    background-color: #0a0e27;
+    min-height: 100vh;
+  }
+  
+  #root {
+    min-height: 100vh;
+  }
+</style>
+
   </head>
   <body>
     <div id="root"></div>
